# Slycot

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  AUTHORS  BUILD.rst  CMakeLists.txt  COPYING  CREDITS  LICENSE.txt  MANIFEST.in  README  README.rst  pyproject.toml  runtests.py  setup.cfg.in  setup.py
.github/conda-env/: build-env.yml  test-env.yml
.github/scripts/: run-tests.sh  set-conda-test-matrix.py
.github/workflows/: before_install.sh  cibuildwheel.yml  conda-build.yml  editable.yml  install.sh  run_tests.sh  set_os_env.sh  slycot-build-and-test.yml  test_linux.yml  test_osx.yml  wget_install_miniconda.sh
build-tools/: cibw_before_build.py  cibw_repair_wheel_macos.sh
conda-recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
conda-recipe-apple/: build.sh  conda_build_config.yaml  meta.yaml
conda-recipe-mkl/: build.sh  meta.yaml
conda-recipe-openblas/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
dev-tools/: check-linux-cibw.bash  inplace-editable-build.bash
doc/: check_names.py  conf.py  create_names_for_reference.py  index.rst  intro.rst  requirements.txt
doc/_build/doctrees/: environment.pickle  index.doctree  intro.doctree
doc/_build/doctrees/nbsphinx/source/dev/: inspect_slycot.ipynb
doc/_build/doctrees/source/dev/: basic.doctree  index.doctree  inspect_slycot.doctree
doc/_build/doctrees/source/reference/: index.doctree  slycot_inner.doctree  slycot_outer.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/html/_sources/: index.rst.txt  intro.rst.txt
doc/_build/html/_sources/source/dev/: inspect_slycot.ipynb.txt
doc/_build/html/_sources/source/reference/: index.rst.txt
doc/_build/html/_static/: libindex.html
doc/_build/html/_static/doc/: AB01ND.html  AB01OD.html  AB05MD.html  AB05PD.html  AB07ND.html  AB08MD.html  AB08NW.html  AB08NX.html  AB08NZ.html  AB09AX.html  AB09BD.html  AB09BX.html  AB09CD.html  AB09DD.html  AB09ED.html  AB09GD.html  AB09HX.html  AB09HY.html  AB09JD.html  AB09JX.html  AB09KD.html  AB09ND.html  AB13AD.html  AB13BD.html  AB13ED.html  AB8NXZ.html  AG08BZ.html  BB02AD.html  BB03AD.html  BD02AD.html  DAESolver.html  DE01OD.html  DE01PD.html  DG01MD.html  DG01ND.html  DG01OD.html  FB01TD.html  FB01VD.html  FD01AD.html  FSQP.html  (+256 more)
doc/_build/html/source/dev/: basic.html  index.html  inspect_slycot.html
doc/_build/html/source/reference/: index.html  slycot_inner.html  slycot_outer.html
doc/_static/doc/: AB01MD.html  AB04MD.html  AB05ND.html  AB05OD.html  AB05QD.html  AB05RD.html  AB05SD.html  AB07MD.html  AB08MZ.html  AB08ND.html  AB08NY.html  AB09AD.html  AB09CX.html  AB09FD.html  AB09HD.html  AB09ID.html  AB09IX.html  AB09IY.html  AB09JV.html  AB09JW.html  AB09KX.html  AB09MD.html  AB13AX.html  AB13CD.html  AB13DD.html  AB13DX.html  AB13FD.html  AB13ID.html  AB13MD.html  AG07BD.html  AG08BD.html  AG08BY.html  AG8BYZ.html  BB01AD.html  BB04AD.html  BD01AD.html  DF01MD.html  DK01MD.html  FB01QD.html  FB01RD.html  (+242 more)
doc/source/: conf.py  index.rst
doc/source/contributing/: index.rst
doc/source/dev/: basic.rst  contributing.rst  f2py.rst  index.rst  inspect_slicot_slycot.ipynb  inspect_slycot.ipynb  slicot_slycot.ipynb
doc/source/examples/: ab13dd_nb.ipynb  ad13dd_example.rst  index.rst
doc/source/explanation/: index.rst  inspect_slicot_slycot.ipynb  inspect_slycot.ipynb  slicot_routines.txt
doc/source/guides/: ab13dd_nb.ipynb  index.rst  sy10yd_nb.ipynb  sysid.rst  system_norms.rst
doc/source/reference/: index.rst  slycot_inner.rst  slycot_outer.rst
doc/source/tutorial/: getting.rst  index.rst
examples/: ab13dd_example.py  ab13dd_nb.ipynb
slycot/: CMakeLists.txt  Makefile  __init__.py  analysis.py  cmake_install.cmake  examples.py  exceptions.py  glue.py  identify.py  math.py  mathematical.py  setup.py  slicot-source.cmake  svd.py  synthesis.py  transform.py  version.py.in
slycot/scipy-openblas-symbols/: cython_blas_signatures.txt  cython_lapack_signatures.txt  generate_def.py  lapack_exclusions.py  scipy-openblas-symbols.def
slycot/src/: AB01MD.c  AB01ND.c  AB01OD.c  AB04MD.c  AB04MD.f  AB05MD.c  AB05MD.f  AB05ND.c  AB05OD.c  AB05PD.c  AB05QD.c  AB05RD.c  AB05SD.c  AB07MD.c  AB07ND.c  AB08MD.c  AB08MD.f  AB08MZ.c  AB08MZ.f  AB08ND.c  AB08ND.f  AB08NX.c  AB08NX.f  AB08NZ.c  AB09AD.c  AB09AD.f  AB09AX.c  AB09BD.c  AB09BD.f  AB09BX.c  AB09BX.f  AB09CD.c  AB09CD.f  AB09CX.c  AB09DD.c  AB09DD.f  AB09ED.c  AB09FD.c  AB09FD.f  AB09GD.c  (+686 more)
slycot/src/leftover/: AB01MD.f  AB01ND.f  AB01OD.f  AB05ND.f  AB05OD.f  AB05PD.f  AB05QD.f  AB05RD.f  AB05SD.f  AB07MD.f  AB07ND.f  AB08NX.f  AB08NZ.f  AB09AX.f  AB09CX.f  AB09ED.f  AB09GD.f  AB09HD.f  AB09HX.f  AB09HY.f  AB09IX.f  AB09IY.f  AB09JD.f  AB09JW.f  AB09JX.f  AB09KD.f  AB09ND.f  AB13BD.f  AB13DX.f  AB13MD.f  AG07BD.f  AG08BD.f  BB01AD.f  BB02AD.f  BB03AD.f  BB04AD.f  BD01AD.f  DE01OD.f  DF01MD.f  DG01MD.f  (+205 more)
slycot/tests/: CMakeLists.txt  docstring_check.py  slycot_pytest_header.py  test.py  test_ab01.py  test_ab04md.py  test_ab08n.py  test_ab09nd.py  test_ab13bd.py  test_ab13md.py  test_ag08bd.py  test_analysis.py  test_examples.py  test_exceptions.py  test_mb.py  test_mb03rd.py  test_mb03schur.py  test_mc.py  test_sb.py  test_sb10jd.py  test_sb10yd.py  test_sg02ad.py  test_sg03ad.py  test_tb05ad.py  test_td04ad.py  test_tg01ad.py  test_tg01fd.py  test_transform.py
tests/: test_ag08bd.py  test_sb.py  test_tg01ad.py
