[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm>=7",
    "wheel",
    "scikit-build>=0.15",
    "cmake>=3.14",
    "numpy!=1.23.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slycot"
description = "A wrapper for the SLICOT control and systems library"
readme = "README.rst"
authors = [{ name = "Enrico Avventi et al." }]
maintainers = [{ name = "Slycot developers", email = "python-control-discuss@lists.sourceforge.net"}]
license = {text = "GPL-2.0 AND BSD-3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C",
    "Programming Language :: Fortran",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/python-control/Slycot"


[tool.setuptools_scm]
write_to = "slycot/version.py"

[tool.pytest.ini_options]
# run the tests with compiled and installed package
addopts = "--pyargs slycot"
