[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm>=8",
    "wheel",
    "scikit-build>=0.15",
    "cmake>=3.14",
    "numpy >= 1.23.1"]
build-backend = "setuptools.build_meta"

[project]
name = "slycot"
description = "A wrapper for the SLICOT control and systems library"
readme = "README.rst"
authors = [{ name = "Enrico Avventi et al." }]
maintainers = [{ name = "Slycot developers", email = "python-control-discuss@lists.sourceforge.net"}]
license = "GPL-2.0 AND BSD-3-Clause"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: Fortran",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1.23.1",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/python-control/Slycot"


[tool.setuptools_scm]
write_to = "slycot/version.py"

[tool.pytest.ini_options]
# run the tests with compiled and installed package
addopts = "--pyargs slycot"

[tool.ruff.lint]
ignore = [ "E741" ]
