# CMakeLists.txt file for Slycot
# use in conjunction with scikit-build
#
# RvP, 180710

# 
set(SLICOT_FSOURCE 

src/SLICOT-reference/src/AB01MD.f
src/SLICOT-reference/src/AB01ND.f
src/SLICOT-reference/src/AB01OD.f
src/SLICOT-reference/src/AB04MD.f
src/SLICOT-reference/src/AB05MD.f
src/SLICOT-reference/src/AB05ND.f
src/SLICOT-reference/src/AB05OD.f
src/SLICOT-reference/src/AB05PD.f
src/SLICOT-reference/src/AB05QD.f
src/SLICOT-reference/src/AB05RD.f
src/SLICOT-reference/src/AB05SD.f
src/SLICOT-reference/src/AB07MD.f
src/SLICOT-reference/src/AB07ND.f
src/SLICOT-reference/src/AB08MD.f
src/SLICOT-reference/src/AB08MZ.f
src/SLICOT-reference/src/AB08ND.f
src/SLICOT-reference/src/AB08NW.f
src/SLICOT-reference/src/AB08NX.f
src/SLICOT-reference/src/AB08NY.f
src/SLICOT-reference/src/AB08NZ.f
src/SLICOT-reference/src/AB09AD.f
src/SLICOT-reference/src/AB09AX.f
src/SLICOT-reference/src/AB09BD.f
src/SLICOT-reference/src/AB09BX.f
src/SLICOT-reference/src/AB09CD.f
src/SLICOT-reference/src/AB09CX.f
src/SLICOT-reference/src/AB09DD.f
src/SLICOT-reference/src/AB09ED.f
src/SLICOT-reference/src/AB09FD.f
src/SLICOT-reference/src/AB09GD.f
src/SLICOT-reference/src/AB09HD.f
src/SLICOT-reference/src/AB09HX.f
src/SLICOT-reference/src/AB09HY.f
src/SLICOT-reference/src/AB09ID.f
src/SLICOT-reference/src/AB09IX.f
src/SLICOT-reference/src/AB09IY.f
src/SLICOT-reference/src/AB09JD.f
src/SLICOT-reference/src/AB09JV.f
src/SLICOT-reference/src/AB09JW.f
src/SLICOT-reference/src/AB09JX.f
src/SLICOT-reference/src/AB09KD.f
src/SLICOT-reference/src/AB09KX.f
src/SLICOT-reference/src/AB09MD.f
src/SLICOT-reference/src/AB09ND.f
src/SLICOT-reference/src/AB13AD.f
src/SLICOT-reference/src/AB13AX.f
src/SLICOT-reference/src/AB13BD.f
src/SLICOT-reference/src/AB13CD.f
src/SLICOT-reference/src/AB13DD.f
src/SLICOT-reference/src/AB13DX.f
src/SLICOT-reference/src/AB13ED.f
src/SLICOT-reference/src/AB13FD.f
src/SLICOT-reference/src/AB13ID.f
src/SLICOT-reference/src/AB13MD.f
src/SLICOT-reference/src/AB8NXZ.f
src/SLICOT-reference/src/AG07BD.f
src/SLICOT-reference/src/AG08BD.f
src/SLICOT-reference/src/AG08BY.f
src/SLICOT-reference/src/AG08BZ.f
src/SLICOT-reference/src/AG8BYZ.f
src/SLICOT-reference/src/BB01AD.f
src/SLICOT-reference/src/BB02AD.f
src/SLICOT-reference/src/BB03AD.f
src/SLICOT-reference/src/BB04AD.f
src/SLICOT-reference/src/BD01AD.f
src/SLICOT-reference/src/BD02AD.f
src/SLICOT-reference/src/DE01OD.f
src/SLICOT-reference/src/DE01PD.f
src/SLICOT-reference/src/DF01MD.f
src/SLICOT-reference/src/DG01MD.f
src/SLICOT-reference/src/DG01ND.f
src/SLICOT-reference/src/DG01NY.f
src/SLICOT-reference/src/DG01OD.f
src/SLICOT-reference/src/DK01MD.f
src/SLICOT-reference/src/FB01QD.f
src/SLICOT-reference/src/FB01RD.f
src/SLICOT-reference/src/FB01SD.f
src/SLICOT-reference/src/FB01TD.f
src/SLICOT-reference/src/FB01VD.f
src/SLICOT-reference/src/FD01AD.f
src/SLICOT-reference/src/IB01AD.f
src/SLICOT-reference/src/IB01BD.f
src/SLICOT-reference/src/IB01CD.f
src/SLICOT-reference/src/IB01MD.f
src/SLICOT-reference/src/IB01MY.f
src/SLICOT-reference/src/IB01ND.f
src/SLICOT-reference/src/IB01OD.f
src/SLICOT-reference/src/IB01OY.f
src/SLICOT-reference/src/IB01PD.f
src/SLICOT-reference/src/IB01PX.f
src/SLICOT-reference/src/IB01PY.f
src/SLICOT-reference/src/IB01QD.f
src/SLICOT-reference/src/IB01RD.f
src/SLICOT-reference/src/IB03AD.f
src/SLICOT-reference/src/IB03BD.f
src/SLICOT-reference/src/MA01AD.f
src/SLICOT-reference/src/MA01BD.f
src/SLICOT-reference/src/MA01BZ.f
src/SLICOT-reference/src/MA01CD.f
src/SLICOT-reference/src/MA02AD.f
src/SLICOT-reference/src/MA02BD.f
src/SLICOT-reference/src/MA02BZ.f
src/SLICOT-reference/src/MA02CD.f
src/SLICOT-reference/src/MA02CZ.f
src/SLICOT-reference/src/MA02DD.f
src/SLICOT-reference/src/MA02ED.f
src/SLICOT-reference/src/MA02ES.f
src/SLICOT-reference/src/MA02EZ.f
src/SLICOT-reference/src/MA02FD.f
src/SLICOT-reference/src/MA02GD.f
src/SLICOT-reference/src/MA02GZ.f
src/SLICOT-reference/src/MA02HD.f
src/SLICOT-reference/src/MA02HZ.f
src/SLICOT-reference/src/MA02ID.f
src/SLICOT-reference/src/MA02IZ.f
src/SLICOT-reference/src/MA02JD.f
src/SLICOT-reference/src/MA02JZ.f
src/SLICOT-reference/src/MA02MD.f
src/SLICOT-reference/src/MA02MZ.f
src/SLICOT-reference/src/MA02NZ.f
src/SLICOT-reference/src/MA02OD.f
src/SLICOT-reference/src/MA02OZ.f
src/SLICOT-reference/src/MA02PD.f
src/SLICOT-reference/src/MA02PZ.f
src/SLICOT-reference/src/MB01KD.f
src/SLICOT-reference/src/MB01LD.f
src/SLICOT-reference/src/MB01MD.f
src/SLICOT-reference/src/MB01ND.f
src/SLICOT-reference/src/MB01OC.f
src/SLICOT-reference/src/MB01OD.f
src/SLICOT-reference/src/MB01OE.f
src/SLICOT-reference/src/MB01OH.f
src/SLICOT-reference/src/MB01OO.f
src/SLICOT-reference/src/MB01OS.f
src/SLICOT-reference/src/MB01OT.f
src/SLICOT-reference/src/MB01PD.f
src/SLICOT-reference/src/MB01QD.f
src/SLICOT-reference/src/MB01RB.f
src/SLICOT-reference/src/MB01RD.f
src/SLICOT-reference/src/MB01RH.f
src/SLICOT-reference/src/MB01RT.f
src/SLICOT-reference/src/MB01RU.f
src/SLICOT-reference/src/MB01RW.f
src/SLICOT-reference/src/MB01RX.f
src/SLICOT-reference/src/MB01RY.f
src/SLICOT-reference/src/MB01SD.f
src/SLICOT-reference/src/MB01SS.f
src/SLICOT-reference/src/MB01TD.f
src/SLICOT-reference/src/MB01UD.f
src/SLICOT-reference/src/MB01UW.f
src/SLICOT-reference/src/MB01UX.f
src/SLICOT-reference/src/MB01VD.f
src/SLICOT-reference/src/MB01WD.f
src/SLICOT-reference/src/MB01XD.f
src/SLICOT-reference/src/MB01XY.f
src/SLICOT-reference/src/MB01YD.f
src/SLICOT-reference/src/MB01ZD.f
src/SLICOT-reference/src/MB02CD.f
src/SLICOT-reference/src/MB02CU.f
src/SLICOT-reference/src/MB02CV.f
src/SLICOT-reference/src/MB02CX.f
src/SLICOT-reference/src/MB02CY.f
src/SLICOT-reference/src/MB02DD.f
src/SLICOT-reference/src/MB02ED.f
src/SLICOT-reference/src/MB02FD.f
src/SLICOT-reference/src/MB02GD.f
src/SLICOT-reference/src/MB02HD.f
src/SLICOT-reference/src/MB02ID.f
src/SLICOT-reference/src/MB02JD.f
src/SLICOT-reference/src/MB02JX.f
src/SLICOT-reference/src/MB02KD.f
src/SLICOT-reference/src/MB02MD.f
src/SLICOT-reference/src/MB02ND.f
src/SLICOT-reference/src/MB02NY.f
src/SLICOT-reference/src/MB02OD.f
src/SLICOT-reference/src/MB02PD.f
src/SLICOT-reference/src/MB02QD.f
src/SLICOT-reference/src/MB02QY.f
src/SLICOT-reference/src/MB02RD.f
src/SLICOT-reference/src/MB02RZ.f
src/SLICOT-reference/src/MB02SD.f
src/SLICOT-reference/src/MB02SZ.f
src/SLICOT-reference/src/MB02TD.f
src/SLICOT-reference/src/MB02TZ.f
src/SLICOT-reference/src/MB02UD.f
src/SLICOT-reference/src/MB02UU.f
src/SLICOT-reference/src/MB02UV.f
src/SLICOT-reference/src/MB02UW.f
src/SLICOT-reference/src/MB02VD.f
src/SLICOT-reference/src/MB02WD.f
src/SLICOT-reference/src/MB02XD.f
src/SLICOT-reference/src/MB02YD.f
src/SLICOT-reference/src/MB03AB.f
src/SLICOT-reference/src/MB03AD.f
src/SLICOT-reference/src/MB03AE.f
src/SLICOT-reference/src/MB03AF.f
src/SLICOT-reference/src/MB03AG.f
src/SLICOT-reference/src/MB03AH.f
src/SLICOT-reference/src/MB03AI.f
src/SLICOT-reference/src/MB03BA.f
src/SLICOT-reference/src/MB03BB.f
src/SLICOT-reference/src/MB03BC.f
src/SLICOT-reference/src/MB03BD.f
src/SLICOT-reference/src/MB03BE.f
src/SLICOT-reference/src/MB03BF.f
src/SLICOT-reference/src/MB03BG.f
src/SLICOT-reference/src/MB03BZ.f
src/SLICOT-reference/src/MB03CD.f
src/SLICOT-reference/src/MB03CZ.f
src/SLICOT-reference/src/MB03DD.f
src/SLICOT-reference/src/MB03DZ.f
src/SLICOT-reference/src/MB03ED.f
src/SLICOT-reference/src/MB03FD.f
src/SLICOT-reference/src/MB03FZ.f
src/SLICOT-reference/src/MB03GD.f
src/SLICOT-reference/src/MB03GZ.f
src/SLICOT-reference/src/MB03HD.f
src/SLICOT-reference/src/MB03HZ.f
src/SLICOT-reference/src/MB03ID.f
src/SLICOT-reference/src/MB03IZ.f
src/SLICOT-reference/src/MB03JD.f
src/SLICOT-reference/src/MB03JP.f
src/SLICOT-reference/src/MB03JZ.f
src/SLICOT-reference/src/MB03KA.f
src/SLICOT-reference/src/MB03KB.f
src/SLICOT-reference/src/MB03KC.f
src/SLICOT-reference/src/MB03KD.f
src/SLICOT-reference/src/MB03KE.f
src/SLICOT-reference/src/MB03LD.f
src/SLICOT-reference/src/MB03LF.f
src/SLICOT-reference/src/MB03LP.f
src/SLICOT-reference/src/MB03LZ.f
src/SLICOT-reference/src/MB03MD.f
src/SLICOT-reference/src/MB03MY.f
src/SLICOT-reference/src/MB03ND.f
src/SLICOT-reference/src/MB03NY.f
src/SLICOT-reference/src/MB03OD.f
src/SLICOT-reference/src/MB03OY.f
src/SLICOT-reference/src/MB03PD.f
src/SLICOT-reference/src/MB03PY.f
src/SLICOT-reference/src/MB03QD.f
src/SLICOT-reference/src/MB03QG.f
src/SLICOT-reference/src/MB03QV.f
src/SLICOT-reference/src/MB03QW.f
src/SLICOT-reference/src/MB03QX.f
src/SLICOT-reference/src/MB03QY.f
src/SLICOT-reference/src/MB03RD.f
src/SLICOT-reference/src/MB03RX.f
src/SLICOT-reference/src/MB03RY.f
src/SLICOT-reference/src/MB03SD.f
src/SLICOT-reference/src/MB03TD.f
src/SLICOT-reference/src/MB03TS.f
src/SLICOT-reference/src/MB03UD.f
src/SLICOT-reference/src/MB03VD.f
src/SLICOT-reference/src/MB03VY.f
src/SLICOT-reference/src/MB03WA.f
src/SLICOT-reference/src/MB03WD.f
src/SLICOT-reference/src/MB03WX.f
src/SLICOT-reference/src/MB03XD.f
src/SLICOT-reference/src/MB03XP.f
src/SLICOT-reference/src/MB03XS.f
src/SLICOT-reference/src/MB03XU.f
src/SLICOT-reference/src/MB03XZ.f
src/SLICOT-reference/src/MB03YA.f
src/SLICOT-reference/src/MB03YD.f
src/SLICOT-reference/src/MB03YT.f
src/SLICOT-reference/src/MB03ZA.f
src/SLICOT-reference/src/MB03ZD.f
src/SLICOT-reference/src/MB04AD.f
src/SLICOT-reference/src/MB04AZ.f
src/SLICOT-reference/src/MB04BD.f
src/SLICOT-reference/src/MB04BP.f
src/SLICOT-reference/src/MB04BZ.f
src/SLICOT-reference/src/MB04CD.f
src/SLICOT-reference/src/MB04DB.f
src/SLICOT-reference/src/MB04DD.f
src/SLICOT-reference/src/MB04DI.f
src/SLICOT-reference/src/MB04DL.f
src/SLICOT-reference/src/MB04DP.f
src/SLICOT-reference/src/MB04DS.f
src/SLICOT-reference/src/MB04DY.f
src/SLICOT-reference/src/MB04DZ.f
src/SLICOT-reference/src/MB04ED.f
src/SLICOT-reference/src/MB04FD.f
src/SLICOT-reference/src/MB04FP.f
src/SLICOT-reference/src/MB04GD.f
src/SLICOT-reference/src/MB04HD.f
src/SLICOT-reference/src/MB04ID.f
src/SLICOT-reference/src/MB04IY.f
src/SLICOT-reference/src/MB04IZ.f
src/SLICOT-reference/src/MB04JD.f
src/SLICOT-reference/src/MB04KD.f
src/SLICOT-reference/src/MB04LD.f
src/SLICOT-reference/src/MB04MD.f
src/SLICOT-reference/src/MB04ND.f
src/SLICOT-reference/src/MB04NY.f
src/SLICOT-reference/src/MB04OD.f
src/SLICOT-reference/src/MB04OW.f
src/SLICOT-reference/src/MB04OX.f
src/SLICOT-reference/src/MB04OY.f
src/SLICOT-reference/src/MB04PA.f
src/SLICOT-reference/src/MB04PB.f
src/SLICOT-reference/src/MB04PU.f
src/SLICOT-reference/src/MB04PY.f
src/SLICOT-reference/src/MB04QB.f
src/SLICOT-reference/src/MB04QC.f
src/SLICOT-reference/src/MB04QF.f
src/SLICOT-reference/src/MB04QS.f
src/SLICOT-reference/src/MB04QU.f
src/SLICOT-reference/src/MB04RB.f
src/SLICOT-reference/src/MB04RU.f
src/SLICOT-reference/src/MB04SU.f
src/SLICOT-reference/src/MB04TB.f
src/SLICOT-reference/src/MB04TS.f
src/SLICOT-reference/src/MB04TT.f
src/SLICOT-reference/src/MB04TU.f
src/SLICOT-reference/src/MB04TV.f
src/SLICOT-reference/src/MB04TW.f
src/SLICOT-reference/src/MB04TX.f
src/SLICOT-reference/src/MB04TY.f
src/SLICOT-reference/src/MB04UD.f
src/SLICOT-reference/src/MB04VD.f
src/SLICOT-reference/src/MB04VX.f
src/SLICOT-reference/src/MB04WD.f
src/SLICOT-reference/src/MB04WP.f
src/SLICOT-reference/src/MB04WR.f
src/SLICOT-reference/src/MB04WU.f
src/SLICOT-reference/src/MB04XD.f
src/SLICOT-reference/src/MB04XY.f
src/SLICOT-reference/src/MB04YD.f
src/SLICOT-reference/src/MB04YW.f
src/SLICOT-reference/src/MB04ZD.f
src/SLICOT-reference/src/MB05MD.f
src/SLICOT-reference/src/MB05MY.f
src/SLICOT-reference/src/MB05ND.f
src/SLICOT-reference/src/MB05OD.f
src/SLICOT-reference/src/MB05OY.f
src/SLICOT-reference/src/MB3JZP.f
src/SLICOT-reference/src/MB3LZP.f
src/SLICOT-reference/src/MB3OYZ.f
src/SLICOT-reference/src/MB3PYZ.f
src/SLICOT-reference/src/MB4DBZ.f
src/SLICOT-reference/src/MB4DLZ.f
src/SLICOT-reference/src/MB4DPZ.f
src/SLICOT-reference/src/MC01MD.f
src/SLICOT-reference/src/MC01ND.f
src/SLICOT-reference/src/MC01OD.f
src/SLICOT-reference/src/MC01PD.f
src/SLICOT-reference/src/MC01PY.f
src/SLICOT-reference/src/MC01QD.f
src/SLICOT-reference/src/MC01RD.f
src/SLICOT-reference/src/MC01SD.f
src/SLICOT-reference/src/MC01SW.f
src/SLICOT-reference/src/MC01SX.f
src/SLICOT-reference/src/MC01SY.f
src/SLICOT-reference/src/MC01TD.f
src/SLICOT-reference/src/MC01VD.f
src/SLICOT-reference/src/MC01WD.f
src/SLICOT-reference/src/MC01XD.f
src/SLICOT-reference/src/MC03MD.f
src/SLICOT-reference/src/MC03ND.f
src/SLICOT-reference/src/MC03NX.f
src/SLICOT-reference/src/MC03NY.f
src/SLICOT-reference/src/MD03AD.f
src/SLICOT-reference/src/MD03BA.f
src/SLICOT-reference/src/MD03BB.f
src/SLICOT-reference/src/MD03BD.f
src/SLICOT-reference/src/MD03BF.f
src/SLICOT-reference/src/MD03BX.f
src/SLICOT-reference/src/MD03BY.f
src/SLICOT-reference/src/NF01AD.f
src/SLICOT-reference/src/NF01AY.f
src/SLICOT-reference/src/NF01BA.f
src/SLICOT-reference/src/NF01BB.f
src/SLICOT-reference/src/NF01BD.f
src/SLICOT-reference/src/NF01BE.f
src/SLICOT-reference/src/NF01BF.f
src/SLICOT-reference/src/NF01BP.f
src/SLICOT-reference/src/NF01BQ.f
src/SLICOT-reference/src/NF01BR.f
src/SLICOT-reference/src/NF01BS.f
src/SLICOT-reference/src/NF01BU.f
src/SLICOT-reference/src/NF01BV.f
src/SLICOT-reference/src/NF01BW.f
src/SLICOT-reference/src/NF01BX.f
src/SLICOT-reference/src/NF01BY.f
src/SLICOT-reference/src/SB01BD.f
src/SLICOT-reference/src/SB01BX.f
src/SLICOT-reference/src/SB01BY.f
src/SLICOT-reference/src/SB01DD.f
src/SLICOT-reference/src/SB01FY.f
src/SLICOT-reference/src/SB01MD.f
src/SLICOT-reference/src/SB02CX.f
src/SLICOT-reference/src/SB02MD.f
src/SLICOT-reference/src/SB02MR.f
src/SLICOT-reference/src/SB02MS.f
src/SLICOT-reference/src/SB02MT.f
src/SLICOT-reference/src/SB02MU.f
src/SLICOT-reference/src/SB02MV.f
src/SLICOT-reference/src/SB02MW.f
src/SLICOT-reference/src/SB02MX.f
src/SLICOT-reference/src/SB02ND.f
src/SLICOT-reference/src/SB02OD.f
src/SLICOT-reference/src/SB02OU.f
src/SLICOT-reference/src/SB02OV.f
src/SLICOT-reference/src/SB02OW.f
src/SLICOT-reference/src/SB02OX.f
src/SLICOT-reference/src/SB02OY.f
src/SLICOT-reference/src/SB02PD.f
src/SLICOT-reference/src/SB02QD.f
src/SLICOT-reference/src/SB02RD.f
src/SLICOT-reference/src/SB02RU.f
src/SLICOT-reference/src/SB02SD.f
src/SLICOT-reference/src/SB03MD.f
src/SLICOT-reference/src/SB03MU.f
src/SLICOT-reference/src/SB03MV.f
src/SLICOT-reference/src/SB03MW.f
src/SLICOT-reference/src/SB03MX.f
src/SLICOT-reference/src/SB03MY.f
src/SLICOT-reference/src/SB03OD.f
src/SLICOT-reference/src/SB03OR.f
src/SLICOT-reference/src/SB03OT.f
src/SLICOT-reference/src/SB03OU.f
src/SLICOT-reference/src/SB03OV.f
src/SLICOT-reference/src/SB03OY.f
src/SLICOT-reference/src/SB03PD.f
src/SLICOT-reference/src/SB03QD.f
src/SLICOT-reference/src/SB03QX.f
src/SLICOT-reference/src/SB03QY.f
src/SLICOT-reference/src/SB03RD.f
src/SLICOT-reference/src/SB03SD.f
src/SLICOT-reference/src/SB03SX.f
src/SLICOT-reference/src/SB03SY.f
src/SLICOT-reference/src/SB03TD.f
src/SLICOT-reference/src/SB03UD.f
src/SLICOT-reference/src/SB04MD.f
src/SLICOT-reference/src/SB04MR.f
src/SLICOT-reference/src/SB04MU.f
src/SLICOT-reference/src/SB04MW.f
src/SLICOT-reference/src/SB04MY.f
src/SLICOT-reference/src/SB04ND.f
src/SLICOT-reference/src/SB04NV.f
src/SLICOT-reference/src/SB04NW.f
src/SLICOT-reference/src/SB04NX.f
src/SLICOT-reference/src/SB04NY.f
src/SLICOT-reference/src/SB04OD.f
src/SLICOT-reference/src/SB04OW.f
src/SLICOT-reference/src/SB04PD.f
src/SLICOT-reference/src/SB04PX.f
src/SLICOT-reference/src/SB04PY.f
src/SLICOT-reference/src/SB04QD.f
src/SLICOT-reference/src/SB04QR.f
src/SLICOT-reference/src/SB04QU.f
src/SLICOT-reference/src/SB04QY.f
src/SLICOT-reference/src/SB04RD.f
src/SLICOT-reference/src/SB04RV.f
src/SLICOT-reference/src/SB04RW.f
src/SLICOT-reference/src/SB04RX.f
src/SLICOT-reference/src/SB04RY.f
src/SLICOT-reference/src/SB06ND.f
src/SLICOT-reference/src/SB08CD.f
src/SLICOT-reference/src/SB08DD.f
src/SLICOT-reference/src/SB08ED.f
src/SLICOT-reference/src/SB08FD.f
src/SLICOT-reference/src/SB08GD.f
src/SLICOT-reference/src/SB08HD.f
src/SLICOT-reference/src/SB08MD.f
src/SLICOT-reference/src/SB08MY.f
src/SLICOT-reference/src/SB08ND.f
src/SLICOT-reference/src/SB08NY.f
src/SLICOT-reference/src/SB09MD.f
src/SLICOT-reference/src/SB10AD.f
src/SLICOT-reference/src/SB10DD.f
src/SLICOT-reference/src/SB10ED.f
src/SLICOT-reference/src/SB10FD.f
src/SLICOT-reference/src/SB10HD.f
src/SLICOT-reference/src/SB10ID.f
src/SLICOT-reference/src/SB10JD.f
src/SLICOT-reference/src/SB10KD.f
src/SLICOT-reference/src/SB10LD.f
src/SLICOT-reference/src/SB10MD.f
src/SLICOT-reference/src/SB10PD.f
src/SLICOT-reference/src/SB10QD.f
src/SLICOT-reference/src/SB10RD.f
src/SLICOT-reference/src/SB10SD.f
src/SLICOT-reference/src/SB10TD.f
src/SLICOT-reference/src/SB10UD.f
src/SLICOT-reference/src/SB10VD.f
src/SLICOT-reference/src/SB10WD.f
src/SLICOT-reference/src/SB10YD.f
src/SLICOT-reference/src/SB10ZD.f
src/SLICOT-reference/src/SB10ZP.f
src/SLICOT-reference/src/SB16AD.f
src/SLICOT-reference/src/SB16AY.f
src/SLICOT-reference/src/SB16BD.f
src/SLICOT-reference/src/SB16CD.f
src/SLICOT-reference/src/SB16CY.f
src/SLICOT-reference/src/SG02AD.f
src/SLICOT-reference/src/SG02CV.f
src/SLICOT-reference/src/SG02CW.f
src/SLICOT-reference/src/SG02CX.f
src/SLICOT-reference/src/SG02ND.f
src/SLICOT-reference/src/SG03AD.f
src/SLICOT-reference/src/SG03AX.f
src/SLICOT-reference/src/SG03AY.f
src/SLICOT-reference/src/SG03BD.f
src/SLICOT-reference/src/SG03BU.f
src/SLICOT-reference/src/SG03BV.f
src/SLICOT-reference/src/SG03BW.f
src/SLICOT-reference/src/SG03BX.f
src/SLICOT-reference/src/SG03BY.f
src/SLICOT-reference/src/TB01ID.f
src/SLICOT-reference/src/TB01IZ.f
src/SLICOT-reference/src/TB01KD.f
src/SLICOT-reference/src/TB01KX.f
src/SLICOT-reference/src/TB01LD.f
src/SLICOT-reference/src/TB01MD.f
src/SLICOT-reference/src/TB01ND.f
src/SLICOT-reference/src/TB01PD.f
src/SLICOT-reference/src/TB01PX.f
src/SLICOT-reference/src/TB01TD.f
src/SLICOT-reference/src/TB01TY.f
src/SLICOT-reference/src/TB01UD.f
src/SLICOT-reference/src/TB01UX.f
src/SLICOT-reference/src/TB01UY.f
src/SLICOT-reference/src/TB01VD.f
src/SLICOT-reference/src/TB01VY.f
src/SLICOT-reference/src/TB01WD.f
src/SLICOT-reference/src/TB01WX.f
src/SLICOT-reference/src/TB01XD.f
src/SLICOT-reference/src/TB01XZ.f
src/SLICOT-reference/src/TB01YD.f
src/SLICOT-reference/src/TB01ZD.f
src/SLICOT-reference/src/TB03AD.f
src/SLICOT-reference/src/TB03AY.f
src/SLICOT-reference/src/TB04AD.f
src/SLICOT-reference/src/TB04AY.f
src/SLICOT-reference/src/TB04BD.f
src/SLICOT-reference/src/TB04BV.f
src/SLICOT-reference/src/TB04BW.f
src/SLICOT-reference/src/TB04BX.f
src/SLICOT-reference/src/TB04CD.f
src/SLICOT-reference/src/TB05AD.f
src/SLICOT-reference/src/TC01OD.f
src/SLICOT-reference/src/TC04AD.f
src/SLICOT-reference/src/TC05AD.f
src/SLICOT-reference/src/TD03AD.f
src/SLICOT-reference/src/TD03AY.f
src/SLICOT-reference/src/TD04AD.f
src/SLICOT-reference/src/TD05AD.f
src/SLICOT-reference/src/TF01MD.f
src/SLICOT-reference/src/TF01MX.f
src/SLICOT-reference/src/TF01MY.f
src/SLICOT-reference/src/TF01ND.f
src/SLICOT-reference/src/TF01OD.f
src/SLICOT-reference/src/TF01PD.f
src/SLICOT-reference/src/TF01QD.f
src/SLICOT-reference/src/TF01RD.f
src/SLICOT-reference/src/TG01AD.f
src/SLICOT-reference/src/TG01AZ.f
src/SLICOT-reference/src/TG01BD.f
src/SLICOT-reference/src/TG01CD.f
src/SLICOT-reference/src/TG01DD.f
src/SLICOT-reference/src/TG01ED.f
src/SLICOT-reference/src/TG01FD.f
src/SLICOT-reference/src/TG01FZ.f
src/SLICOT-reference/src/TG01GD.f
src/SLICOT-reference/src/TG01HD.f
src/SLICOT-reference/src/TG01HU.f
src/SLICOT-reference/src/TG01HX.f
src/SLICOT-reference/src/TG01HY.f
src/SLICOT-reference/src/TG01ID.f
src/SLICOT-reference/src/TG01JD.f
src/SLICOT-reference/src/TG01JY.f
src/SLICOT-reference/src/TG01LD.f
src/SLICOT-reference/src/TG01LY.f
src/SLICOT-reference/src/TG01MD.f
src/SLICOT-reference/src/TG01ND.f
src/SLICOT-reference/src/TG01NX.f
src/SLICOT-reference/src/TG01PD.f
src/SLICOT-reference/src/TG01QD.f
src/SLICOT-reference/src/TG01WD.f
src/SLICOT-reference/src/UD01BD.f
src/SLICOT-reference/src/UD01CD.f
src/SLICOT-reference/src/UD01DD.f
src/SLICOT-reference/src/UD01MD.f
src/SLICOT-reference/src/UD01MZ.f
src/SLICOT-reference/src/UD01ND.f
src/SLICOT-reference/src/UE01MD.f

src/SLICOT-reference/src/delctg.f
src/SLICOT-reference/src/select.f

src/SLICOT-reference/src/SLCT_DLATZM.f
src/SLICOT-reference/src/SLCT_ZLATZM.f

)

set(SLYCOT_FSOURCE  src/ftruefalse.f src/XERBLA.f)

set(F2PYSOURCE src/_wrapper.pyf)
set(F2PYSOURCE_DEPS
  src/analysis.pyf src/math.pyf
  src/transform.pyf src/synthesis.pyf
  src/_helper.pyf)

configure_file(version.py.in version.py @ONLY)

set(PYSOURCE

  __init__.py  examples.py exceptions.py
  analysis.py math.py synthesis.py transform.py
  ${CMAKE_CURRENT_BINARY_DIR}/version.py)

set(SLYCOT_MODULE "_wrapper")

set(GENERATED_MODULE
  ${CMAKE_CURRENT_BINARY_DIR}/${SLYCOT_MODULE}${PYTHON_EXTENSION_MODULE_SUFFIX})


set(CMAKE_Fortran_FLAGS )

add_custom_target(wrapper ALL DEPENDS ${SLICOT_FSOURCE} ${SLYCOT_FSOURCE})
add_custom_command(
  OUTPUT _wrappermodule.c _wrapper-f2pywrappers.f
  COMMAND ${F2PY_EXECUTABLE} -m SLYCOT
  ${CMAKE_CURRENT_SOURCE_DIR}/${F2PYSOURCE}
  DEPENDS ${F2PYSOURCE_DEPS} ${F2PYSOURCE}
)

add_library(
  ${SLYCOT_MODULE} MODULE
  _wrappermodule.c
  ${F2PY_INCLUDE_DIR}/fortranobject.c
  _wrapper-f2pywrappers.f
  ${SLICOT_FSOURCE} ${SLYCOT_FSOURCE})

target_link_libraries(${SLYCOT_MODULE}
  ${LAPACK_LIBRARIES})

target_include_directories(
  ${SLYCOT_MODULE} PUBLIC
  ${F2PY_INCLUDE_DIRS}
  ${PYTHON_INCLUDE_DIRS}
  )

if (UNIX)
  if (APPLE)
    set_target_properties(${SLYCOT_MODULE} PROPERTIES
      LINK_FLAGS  '-Wl,-dylib,-undefined,dynamic_lookup')
  else()
    set_target_properties(${SLYCOT_MODULE} PROPERTIES
      LINK_FLAGS  '-Wl,--allow-shlib-undefined')
  endif()
endif()

python_extension_module(${SLYCOT_MODULE})

install(TARGETS ${SLYCOT_MODULE} LIBRARY DESTINATION slycot)
install(FILES ${PYSOURCE} DESTINATION slycot)

add_subdirectory(tests)
